--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.6",
     "prettier": "3.6.2",
+    "shadcn": "^3.2.1",
     "tw-animate-css": "^1.3.8",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
