--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/fiber": "^9.5.0",
+    "@rorychad/gilect": "^0.0.5",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +24,8 @@
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
